[gd_scene load_steps=8 format=3 uid="uid://bvn2328bqjap1"]

[ext_resource type="Script" path="res://UI/mainScenes/scripts/cs_screen.gd" id="1_yjc5y"]
[ext_resource type="Texture2D" uid="uid://2v1co53kwkgj" path="res://assets/sprites/sheets/SwordFighter/SwordCharacterPreview.png" id="2_mq46u"]
[ext_resource type="Texture2D" uid="uid://hd8y24hy54cl" path="res://assets/sprites/sheets/RoboFighter/RoboCharacterPreview.png" id="3_y2plt"]
[ext_resource type="PackedScene" uid="uid://2llhpgjqp727" path="res://characters/SwordFighter/uiScenes/Swordsman_select_button.tscn" id="4_k4gb4"]
[ext_resource type="PackedScene" uid="uid://cjb5w1yp1p5w2" path="res://characters/RoboFighter/uiScenes/Robot_select_button.tscn" id="5_2s4dv"]
[ext_resource type="PackedScene" uid="uid://dv1b306mhr3bj" path="res://UI/extraScenes/Start_button.tscn" id="7_aq75b"]
[ext_resource type="PackedScene" uid="uid://b6w7oonrh33u0" path="res://UI/extraScenes/Deselect_button.tscn" id="7_p3qkd"]

[node name="Character Select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yjc5y")
SWORDSMAN = ExtResource("2_mq46u")
ROBOT = ExtResource("3_y2plt")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.435294, 0.478431, 1, 1)

[node name="CSS Sections" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Char Preview1" type="Control" parent="CSS Sections"]
custom_minimum_size = Vector2(426, 0)
layout_mode = 2

[node name="TextureRect1" type="TextureRect" parent="CSS Sections/Char Preview1"]
custom_minimum_size = Vector2(350, 350)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HoverTexture1" type="TextureRect" parent="CSS Sections/Char Preview1"]
self_modulate = Color(1, 1, 1, 0.509804)
custom_minimum_size = Vector2(350, 350)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Char Select" type="Control" parent="CSS Sections"]
custom_minimum_size = Vector2(426, 0)
layout_mode = 2

[node name="Background" type="ColorRect" parent="CSS Sections/Char Select"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.392157, 0.392157, 0.921569, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CSS Sections/Char Select"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="CSS Sections/Char Select/VBoxContainer"]
custom_minimum_size = Vector2(0, 520)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="CSS Sections/Char Select/VBoxContainer/Control"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="Character" parent="CSS Sections/Char Select/VBoxContainer/Control/GridContainer" instance=ExtResource("4_k4gb4")]
layout_mode = 2

[node name="Character Button" parent="CSS Sections/Char Select/VBoxContainer/Control/GridContainer" instance=ExtResource("5_2s4dv")]
layout_mode = 2

[node name="Start Controls" type="Control" parent="CSS Sections/Char Select/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="ButtonContainer" type="VBoxContainer" parent="CSS Sections/Char Select/VBoxContainer/Start Controls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button Control" parent="CSS Sections/Char Select/VBoxContainer/Start Controls/ButtonContainer" instance=ExtResource("7_p3qkd")]
layout_mode = 2

[node name="StartButton" parent="CSS Sections/Char Select/VBoxContainer/Start Controls/ButtonContainer" instance=ExtResource("7_aq75b")]
layout_mode = 2

[node name="Char Preview2" type="Control" parent="CSS Sections"]
custom_minimum_size = Vector2(426, 0)
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="CSS Sections/Char Preview2"]
custom_minimum_size = Vector2(350, 350)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HoverTexture2" type="TextureRect" parent="CSS Sections/Char Preview2"]
self_modulate = Color(1, 1, 1, 0.509804)
custom_minimum_size = Vector2(350, 350)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="character_dehovered" from="CSS Sections/Char Select/VBoxContainer/Control/GridContainer/Character" to="." method="_on_character_dehovered"]
[connection signal="character_hovered" from="CSS Sections/Char Select/VBoxContainer/Control/GridContainer/Character" to="." method="_on_character_hovered"]
[connection signal="character_selected" from="CSS Sections/Char Select/VBoxContainer/Control/GridContainer/Character" to="." method="_on_character_selected"]
[connection signal="character_dehovered" from="CSS Sections/Char Select/VBoxContainer/Control/GridContainer/Character Button" to="." method="_on_character_dehovered"]
[connection signal="character_hovered" from="CSS Sections/Char Select/VBoxContainer/Control/GridContainer/Character Button" to="." method="_on_character_hovered"]
[connection signal="character_selected" from="CSS Sections/Char Select/VBoxContainer/Control/GridContainer/Character Button" to="." method="_on_character_selected"]
[connection signal="button_selected" from="CSS Sections/Char Select/VBoxContainer/Start Controls/ButtonContainer/Button Control" to="." method="_on_back_button_selected"]
[connection signal="button_selected" from="CSS Sections/Char Select/VBoxContainer/Start Controls/ButtonContainer/StartButton" to="." method="_on_start_button_selected"]
